--- a/app/src/main/res/layout/activity_register_number.xml
+++ b/app/src/main/res/layout/activity_register_number.xml
@@ -1,63 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/background"
     android:layout_height="match_parent"
     tools:context=".RegisterNumberActivity">
 
+    <!-- Main Content -->
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/design_default_color_surface">
 
-        <TextView
+        <!-- Existing content (your RelativeLayout) -->
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="Enter Number To\nSend SMS\nin\nEMERGENCY!"
-            android:textSize="19sp"
-            android:fontFamily="@font/varela_round"
-            android:textColor="@color/black"
-            android:id="@+id/text1"
-            android:textAlignment="center"/>
+            android:layout_centerInParent="true">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
-            android:id="@+id/number"
-            android:layout_below="@id/text1"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:hint="Number"
-                android:inputType="numberDecimal"
-                android:id="@+id/numberEdit"
-                android:maxLength="10"
-                android:fontFamily="@font/varela_round"
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/bebas"
+                android:text="@string/enter_your_emergency_contact_nto_send_nsms"
                 android:textAlignment="center"
-                android:layout_height="match_parent"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:textColor="#45303c"
+                android:textSize="25sp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_margin="10dp"
-            android:onClick="saveNumber"
-            android:textColor="@color/black"
-            app:cornerRadius="10dp"
-            android:layout_below="@id/number"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="@font/varela_round"
-            android:backgroundTint="#ffffff"
-            android:text="Finish"/>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/number"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text1"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="10dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/numberEdit"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/bebas"
+                    android:hint="@string/enter_number"
+                    android:inputType="numberDecimal"
+                    android:maxLength="10"
+                    android:textAlignment="center" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/number"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="10dp"
+                android:backgroundTint="#ffffff"
+                android:fontFamily="@font/bebas"
+                android:onClick="saveNumber"
+                android:text="@string/finish"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                app:cornerRadius="10dp" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="310dp"
+            android:layout_height="500dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="45dp"
+            android:layout_marginBottom="-120dp"
+            app:srcCompat="@drawable/asian" />
     </RelativeLayout>
 
+    <!-- Sidebar (Navigation Drawer) -->
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:orientation="vertical"
+        android:background="#f9e7ce"
+        android:padding="10dp">
 
+        <!-- Sidebar contents (unchanged) -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:background="#f9e7ce">
 
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/woman"
+                android:contentDescription="@string/profile_icon"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginEnd="10dp" />
 
-</RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hello_user"
+                android:textSize="20sp"
+                android:fontFamily="@font/playfair"
+                android:textColor="#2e2133"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp" />
+        </LinearLayout>
+
+        <!-- Add all the sidebar options here -->
+
+        <!-- Example: Change Emergency Contact Option -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="15dp"
+            android:gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackground">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_change_number"
+                android:contentDescription="@string/change_emergency_contact"
+                android:layout_marginEnd="15dp"
+                app:tint="#2e2133" />
+
+            <TextView
+                android:id="@+id/changeNumberOption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/change_emergency_contact"
+                android:textSize="20sp"
+                android:textColor="#2e2133"
+                android:fontFamily="@font/playfair"
+                android:gravity="start" />
+        </LinearLayout>
+    </LinearLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
